--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
       <div id="weatherInfo" class="hidden">
         <h2 id="cityName"></h2>
         <div class="weather-details">
-          <img src="" alt="Weather Icon" id="weatherIcon" />
+          <img
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0-OYPE5kKU_uYBXXiQem0a3tAc9sA_kVl6Q&s"
+            alt="Weather Icon"
+            id="weatherIcon"
+          />
           <p id="temperature"></p>
           <p id="weatherDescription"></p>
         </div>
